--- a/thunderchild/static/thunderchild/css_src/create_edit_entry.less
+++ b/thunderchild/static/thunderchild/css_src/create_edit_entry.less
@@ -39,7 +39,7 @@
             label {
                 margin:0;
                 input {
-                    margin: 0 5px 4px 0;
+                    margin: 0 2px 4px 0;
                 }
             }
         }
