--- a/thunderchild/static/thunderchild/css_src/login.less
+++ b/thunderchild/static/thunderchild/css_src/login.less
@@ -1,14 +1,18 @@
-#content_container {
-  &.login {
-    overflow:visible;
-  }
+#login {
+  padding:0;
 }
 #login_form_holder {
+  position:absolute;
   background:@groupBackgroundColor;
   border:1px solid @groupBorderColor;
   padding:30px;
+  width:310px;
+  height:132px;
+  top:50%;
+  left:50%;
+  margin-top:-96px;
+  margin-left:-185px;
   .border-radius(8px);
-  margin-top:200px;
   form {
     margin:0;
     &.form-horizontal {
