--- a/thunderchild/static/thunderchild/css_src/templates.less
+++ b/thunderchild/static/thunderchild/css_src/templates.less
@@ -61,14 +61,11 @@
         h3 {
           float:left;
           margin:0;
-          font-size:13px;
+          font-size:14px;
           line-height:19px;
         }
         a {
           padding:0;
-          i {
-            margin-top:2px;
-          }
         }
         ul {
           &.controls {
@@ -119,12 +116,24 @@
     font-weight:bold;
   }
   input[type="text"] {
-    &.input-large {
-      width:520px;
-    }
+    width:516px;
   }
   .alert {
     margin-bottom:10px;
+  }
+  ul {
+    list-style:none;
+    padding:0;
+    margin:0;
+    li {
+      float:left;
+      margin-right:10px;
+      label {
+        input {
+          margin:0 2px 4px 0;
+        }
+      }
+    }
   }
 }
 #preview-link-holder {
